...

            <TextView
                android:id="@+id/courseTitleNewSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

                <TextView
                    android:id="@+id/sectionCRN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/sectionCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/sectionInstructor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/sectionCampus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/sectionLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/sectionDateRange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/sectionClassTimes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/sectionCRNField"
                    android:layout_width="@dimen/activity_insert_default_width"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/sectionCodeField"
                    android:layout_width="@dimen/activity_insert_default_width"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/sectionInstructorField"
                    android:layout_width="@dimen/activity_insert_default_width"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/sectionCampusField"
                    android:layout_width="@dimen/activity_insert_default_width"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/sectionLocationFIeld"
                    android:layout_width="@dimen/activity_insert_default_width"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/sectionStartDateField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/sectionEndDateField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/classTimeMonday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/sectionMondayField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/sectionMondayEndField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/classTimeTuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/sectionTuesdayField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/sectionTuesdayEndField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/classTimeWednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/sectionWednesdayField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/sectionWednesdayEndField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/classTimeThursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/sectionThursdayField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/sectionThusrdayEndField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/classTimeFriday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/sectionFridayField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/sectionFridayEndField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/addNewSectionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/finishButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
