...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/createWorkspaceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonWorkspaceOnClick"
            android:text="@string/workspace_b" />
    </LinearLayout>

...
